# quakeforge-old

./: .gitignore  AUTHORS  CREDITS  CodingStyleGuide.txt  ERRATA  INSTALL  Makefile  Makefile.in  NEWS  README  README.DJGPP  README.WIN  Rules.mk.in  TESTIFY  TODO  WISHLIST  acconfig.h  acinclude.m4  bootstrap.bat  build_rpm.in  client.in  configure  configure.in  djconfig.bat  djconfig.sh  post.in  pre.in  quakeforge.dsp  quakeforge.dsw  quakeforge.ncb  quakeforge.opt  quakeforge.plg  quakeforge.spec.in  rules.in  servers.txt  srcfiles.in  tonik.notes
common/: .gitignore  Makefile.in  adivtab.-c  anorm_dots.-c  anorms.-c  anorms.h  asm_draw.h  asm_i386.h  block16.h  block8.h  bothdefs.h  bspfile.h  buildnum.c  cd_audio.c  cd_linux.c  cd_null.c  cd_sdl.c  cd_win.c  cd_wrapper.c  cdaudio.h  cl_cam.c  cl_ents.c  cl_input.c  cl_main.c  cl_slist.c  cl_slist.h  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  common_protocol.h  common_quakedef.h  config.h  config.h.in  console.c  console.h  context_x11.c  context_x11.h  (+210 more)
common/wins/: common_quakedef.h  config.h  net_wins.h
debian/: README.Debian  changelog  control  copyright  quake-3dfx.docs  quake-3dfx.files  quake-3dfx.suid  quake-ggi.files  quake-gl.files  quake-sdl.docs  quake-sdl.files  quake-server.dirs  quake-server.files  quake-svga.files  quake-svga.suid  quake-x11.files  rules  wrapper
doc/: README.source  gl_notes.txt  quake.xpm  qw_protocol_notes.txt  uquake_net.txt
gamedata/uquake/src101/: client.qc  combat.qc  doors.qc  items.qc  misc.qc  monsters.qc  ogre.qc  oldone.qc  player.qc  shalrath.qc  shambler.qc  triggers.qc
gamedata/uquake/src106/: client.qc  combat.qc  doors.qc  items.qc  misc.qc  monsters.qc  ogre.qc  plats.qc  progs106gpl.txt  shambler.qc  zombie.qc
old_headers/qwcl/: glquake.h
old_headers/standalone/: quakedef.h
qw_client/: Makefile  Makefile.in  cl_cam.c  cl_demo.c  cl_ents.c  cl_input.c  cl_main.c  cl_parse.c  cl_pred.c  cl_tent.c  d_edge.c  d_surf.c  draw.c  gl_cl_parse.c  gl_draw.c  gl_mesh.c  gl_model.c  gl_model.h  gl_ngraph.c  gl_rlight.c  gl_rmisc.c  gl_rpart.c  gl_screen.c  gl_vidlinux.c  gl_vidlinux_x11.c  glquake.h  keys.c  menu.c  menu.h  model.c  qw_client.dsp  r_edge.c  r_efrag.c  r_main.c  r_misc.c  r_part.c  r_sprite.c  sbar.c  screen.c  sw_cl_parse.c  (+3 more)
qw_common/: bothdefs.h  bspfile.h  client.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  cvar.c  cvar.h  keys.h  model.h  net.h  net_chan.c  net_udp.c  net_udp6.c  pmove.c  pmove.h  pmove_simple.h  pmovetst.c  protocol.h  quakedef.h  render.h  screen.h
qw_server/: .gitignore  Makefile  Makefile.in  model.c  pr_cmds.c  progdefs.h  qw_server.dsp  qwsvdef.h  server.h  sv_ccmds.c  sv_ents.c  sv_init.c  sv_main.c  sv_move.c  sv_nchan.c  sv_phys.c  sv_send.c  sv_user.c  sys.h  sys_unix.c  sys_win.c  world.c  world.h
rpm/: .gitignore  build_rpm.in  quakeforge.spec.in
standalone/: Makefile  cl_parse.c  draw.c  gl_draw.c  gl_refrag.c  gl_rmain.c  sv_main.c  sys_linux.c  world.c
standalone/include/: protocol.h
tools/gas2masm/: gas2masm.c  gas2masm.dsp
tools/qwfwd/: misc.c  qwfwd.c
uquake/: Makefile  Makefile.extra  Makefile.in  bspfile.h  chase.c  chasecam.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_pred.c  cl_tent.c  client.h  common.c  common.h  conproc.c  conproc.h  console.c  cvar.c  cvar.h  d_edge.c  d_polyse.c  d_surf.c  dos_v2.c  draw.c  gl_cl_parse.c  gl_draw.c  gl_model.c  gl_model.h  gl_refrag.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rpart.c  gl_rsurf.c  gl_screen.c  gl_vidlinux.c  gl_warp.c  glquake.h  host.c  (+63 more)
uquake/wins/: sys_win.c
win32/: config.h
win32/borlandc/: config.h
win32/vc/: dirent.h
winsup/sys/: dirent.h
